<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.v7.widget.RecyclerView
      android:id="@+id/contentView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="8dp"
      android:overScrollMode="always"
      android:clipToPadding="false"
      android:clipChildren="false"
      app:layoutManager="LinearLayoutManager"
  />

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/secondaryAction"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|right"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
  />

</android.support.design.widget.CoordinatorLayout>
